# Flight-Benchy

./: .gitignore  .gitmodules  CLAUDE.md  DONE-2026-06-10.md  README.md  main.py  migrate_flight_configs.py  mixer.py  pid.py  pyproject.toml  requirements.txt  ui.py
decision/: ADR-001-pid-lever-stabilization.md  ADR-002-telemetry-logging.md  ADR-003-extract-pid-controller.md  ADR-004-operator-interface.md  ADR-005-bno085-pid-input.md  ADR-006-predictive-correction.md  ADR-007-thrust-characterization.md  ADR-008-cascaded-pid.md  ADR-009-preflight-check.md  ADR-010-grv-calibrated-gyro-dual-report.md  ADR-011-power-telemetry-ina238.md  ADR-012-thrust-expo.md  DR-001-pid-lever-stabilization.md  DR-002-telemetry-logging.md  DR-003-extract-pid-controller.md  DR-004-operator-interface.md  DR-005-bno085-pid-input.md  DR-006-predictive-correction.md  DR-007-thrust-characterization.md  DR-008-cascaded-pid.md  DR-009-preflight-check.md  DR-010-grv-calibrated-gyro-dual-report.md  DR-011-power-telemetry-ina238.md  DR-012-thrust-expo.md  DR-013-friction-characterization.md  DR-014-setpoint-representation.md  DR-015-kpis-and-diagnostic-visualisations.md  DR-016-deterministic-telemetry-io.md
examples/: test_calibration.py  test_dshot.py  test_encoder.py  test_freq.py  test_more_reports.py  test_reports.py  test_reports_full.py  test_simple.py
ideas/: IDEA-001-acceptance-criteria.md  IDEA-002-power-cut-check-ina-sensor.md  IDEA-003-fixed-frame-imu-noise-floor.md  IDEA-004-document-imu-encoder-tolerance-floor.md  IDEA-005-diagnose-settle-window-mismatch.md  (+4 more)
src/: config.json  main.py  (+6 more)
(+355 files in other folders)
