[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flight-benchy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "matplotlib>=3.10.8",
    "mpremote>=1.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
